# sloan-suite

./: README.md  pyproject.toml  requirements.txt
scripts/: register_context_menu.ps1
src/sloan/: __init__.py  app.py  config.py  naming.py  shell_integration.py  tray.py  watcher.py
src/sloan/gui/: rename_dialog.py  settings_dialog.py
src/sloan/services/: graph_client.py  jotform_poller.py  organizer.py
src/sloan/utils/: log.py  resource_path.py  sanitize.py
src/sloan_suite.egg-info/: SOURCES.txt  requires.txt
