[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "sloan-suite"
version = "0.9.0"
description = "Sloan Windows & Construction – Renamer, Organizer (SharePoint), Jotform Ingestor"
authors = [{ name = "Sloan Windows & Construction" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
"PyQt5>=5.15",
"watchdog>=4",
"requests>=2.31",
"msal>=1.28",
"python-dateutil>=2.9"
]


[project.scripts]
sloan-suite = "sloan.app:main"

[tool.setuptools.package-data]
sloan = ["assets/*"]